# Vistec_Intern_Exam

./: .gitignore  4_TASKS_SUMMARY.md  COMPLETE_DOCUMENTATION.md  COMPLETE_USER_GUIDE.md  CORRECT_TASK_NAMES.md  DEPLOYMENT_GUIDE.md  FILE_ORGANIZATION_SUMMARY.md  README.md  README_SIM2SIM.md  README_original.md.bak  ROS2_BUILD_TROUBLESHOOTING.md  SELF_CONTAINED_REPOSITORY.md  SETUP.md  SETUP_original.md.bak  VELOCITY_COMMANDS_GUIDE.md  VERIFICATION_SUMMARY.md  send_velocity_commands_gazebo.sh  send_velocity_commands_isaac.py  test_gazebo_task.sh  test_isaac_task.py  verify_setup.sh
Actuator_net/: README.md  process_dataset.py  test.py  train.py  train_lstm.py
Vistec_ex_ws/: CORRECTED_TABLE_21.md  DELIVERABLES.md  FIGURE_GENERATION_SUMMARY.md  FK_AND_CONTACT_ISSUES.md  FK_VERIFICATION_REPORT.md  FLOATING_GO2_GUIDE.md  HYBRID_ANALYSIS_SUMMARY.md  QUICKSTART.md  README.md  README_VISUALIZATION.md  SKY_ATTACHMENT_GUIDE.md  TASK_COMPARISON.md  UPDATE_SUMMARY.md  collision_mesh_comparison.md  sim2sim_mismatch_analysis.md
Vistec_ex_ws/src/deploy_policy/: CMakeLists.txt  package.xml
Vistec_ex_ws/src/deploy_policy/config/: README_CONFIG.md  go2_deploy.yaml
Vistec_ex_ws/src/deploy_policy/deploy_policy/: actuator_network.py  go2_policy_runner.py
Vistec_ex_ws/src/deploy_policy/launch/: go2_deploy.launch.py
Vistec_ex_ws/src/deploy_policy/scripts/: data_logger_gazebo.py  data_logger_gazebo_single.py  data_logger_gazebo_v2.py  data_logger_passive_mode.py  fix_odom_orientation.py  gazebo_model_state_to_odom.py  gazebo_pose_bridge.py  gazebo_state_to_odom.py  go2_deploy_node.py  gz_pose_to_odom.py  imu_to_odom.py  isaac_data_logger.py  isaac_integrated_experiment.py  isaac_test_experiments.py  passive_data_collector.py  pose_to_odom.py
trained_models/exported/: policy.onnx  policy.pt
unitree_rl_lab/Configs/: README_PATHS.md  __init__.py  velocity_env_cfg.py  velocity_env_cfg_implicit.py  velocity_env_cfg_implicit_with_dr.py  velocity_env_cfg_lstm_custom_enhanced.py  velocity_env_cfg_lstm_no_dr.py  velocity_env_cfg_mlp_no_dr.py
(+100 files in other folders)
